# spa

./: .gitignore  README.md
Team29/Code29/: .gitignore  CMakeLists.txt  Contact.csv  README.txt
Team29/Code29/src/autotester/: CMakeLists.txt
Team29/Code29/src/autotester/src/: TestWrapper.cpp  TestWrapper.h
Team29/Code29/src/integration_testing/src/: TestExtractor.cpp  (+2 more)
Team29/Code29/src/spa/: CMakeLists.txt
Team29/Code29/src/spa/src/ast/: Expression.cpp  Expression.h  Node.cpp  Node.h  Procedure.cpp  Procedure.h  Program.cpp  Program.h  Statement.cpp  Statement.h  StatementList.cpp  StatementList.h
Team29/Code29/src/spa/src/ast/parser/: AssignParser.cpp  AssignParser.h  CallParser.cpp  CallParser.h  ConditionalParser.cpp  ConditionalParser.h  ExpressionParser.cpp  ExpressionParser.h  IfParser.cpp  IfParser.h  ParseException.h  Parser.cpp  Parser.h  PrintParser.cpp  PrintParser.h  ProcedureParser.cpp  ProcedureParser.h  ReadParser.cpp  ReadParser.h  StatementListParser.cpp  StatementListParser.h  StatementParser.cpp  StatementParser.h  WhileParser.cpp  WhileParser.h
Team29/Code29/src/spa/src/cfg/: AffectsGraph.cpp  AffectsGraph.h  Graph.cpp  Graph.h  Node.cpp  Node.h  ProgramGraph.cpp  ProgramGraph.h  Visitor.cpp  Visitor.h
Team29/Code29/src/spa/src/opr/: Join.cpp  Join.h  Operator.cpp  Operator.h  Project.cpp  Project.h  Scan.cpp  Scan.h
Team29/Code29/src/spa/src/opt/: BushyTreesPlanner.cpp  BushyTreesPlanner.h  Exception.h  GreedyPlanner.cpp  GreedyPlanner.h  HeuristicPlanner.cpp  HeuristicPlanner.h  QueryPlanner.cpp  QueryPlanner.h  SequentialPlanner.cpp  SequentialPlanner.h
Team29/Code29/src/spa/src/pkb/: AffectsTVisitor.cpp  AffectsTVisitor.h  AffectsVisitor.cpp  AffectsVisitor.h  Cache.h  Exception.h  NextVisitor.cpp  NextVisitor.h  PKBRoot.cpp  PKBRoot.h
Team29/Code29/src/spa/src/pql/: Comparators.h  Declaration.cpp  Declaration.h  Estimation.cpp  Estimation.h  Evaluator.cpp  Evaluator.h  Parser.cpp  Parser.h  Query.cpp  Query.h  QueryBuilder.cpp  QueryBuilder.h  QueryException.h  Ref.cpp  Ref.h  Result.cpp  Result.h
Team29/Code29/src/spa/src/pql/clause/: Affects.cpp  Affects.h  Calls.cpp  Calls.h  Clause.cpp  Clause.h  Compare.cpp  Compare.h  Follows.cpp  Follows.h  Modifies.cpp  Modifies.h  Next.cpp  Next.h  Parent.cpp  Parent.h  Pattern.cpp  Pattern.h  Uses.cpp  Uses.h
Team29/Code29/src/spa/src/utils/: Attribute.cpp  Attribute.h  Batch.cpp  Batch.h  Element.h  Schema.cpp  Schema.h  Translator.cpp  Translator.h
Team29/Code29/src/spa/src/xtr/: CallsExtractor.cpp  CallsExtractor.h  CfgExtractor.cpp  CfgExtractor.h  ExtractException.h  FollowsExtractor.cpp  FollowsExtractor.h  ModifiesExtractor.cpp  ModifiesExtractor.h  ParentExtractor.cpp  ParentExtractor.h  PatternExtractor.cpp  PatternExtractor.h  SourceExtractor.cpp  SourceExtractor.h  UsesExtractor.cpp  UsesExtractor.h
Team29/Code29/src/unit_testing/: CMakeLists.txt
Team29/Code29/src/unit_testing/src/: ASTHelper.cpp  ASTHelper.h  TestAST.cpp  TestFunctions.cpp  TestTokenizer.cpp
Team29/Code29/src/unit_testing/src/pql/: TestComparators.cpp  TestComparators.h  TestDeclaration.cpp  TestDeclaration.h  TestParser.cpp  TestParser.h  TestParserCompare.cpp  TestParserPattern.cpp  TestParserRelation.cpp  TestQuery.cpp  TestQuery.h  TestQueryBuilder.cpp  TestRef.cpp  TestRef.h  TestResult.cpp  TestResult.h
Team29/Code29/src/unit_testing/src/pql/clause/: TestAffects.cpp  TestAffects.h  TestCalls.cpp  TestCalls.h  TestClause.cpp  TestClause.h  TestCompare.cpp  TestCompare.h  TestFollows.cpp  TestFollows.h  TestModifies.cpp  TestModifies.h  TestNext.cpp  TestNext.h  TestParent.cpp  TestParent.h  TestPattern.cpp  TestPattern.h  TestUses.cpp  TestUses.h
Team29/Code29/src/unit_testing/src/pql/data/: DeclarationData.cpp  DeclarationData.h  QueryData.cpp  QueryData.h  QueryDataUtil.cpp  QueryDataUtil.h  QueryStringBuilder.cpp  QueryStringBuilder.h  RefBuilder.h
Team29/Code29/src/unit_testing/src/pql/data/clause/: AffectsBipData.cpp  AffectsBipData.h  AffectsBipTData.cpp  AffectsBipTData.h  AffectsData.cpp  AffectsData.h  AffectsTData.cpp  AffectsTData.h  CallsData.cpp  CallsData.h  CallsTData.cpp  CallsTData.h  CompareData.cpp  CompareData.h  FollowsData.cpp  FollowsData.h  FollowsTData.cpp  FollowsTData.h  ModifiesData.cpp  ModifiesData.h  NextBipData.cpp  NextBipData.h  NextBipTData.cpp  NextBipTData.h  NextData.cpp  NextData.h  NextTData.cpp  NextTData.h  ParentData.cpp  ParentData.h  ParentTData.cpp  ParentTData.h  PatternData.cpp  PatternData.h  UsesData.cpp  UsesData.h
Team29/Code29/tests/: .gitignore  time_analyzer.py
Team29/Tests29/custom_test_cases/: complex_cfg_queries.txt  complex_cfg_source.txt  multiple_procedure_nested_calls_queries.txt  multiple_procedure_nested_calls_source.txt  single_procedure_duplicable_queries.txt  single_procedure_duplicable_source.txt  single_procedure_nested_if_while_SIMPLE_queries.txt  single_procedure_nested_if_while_SIMPLE_source.txt
Team29/Tests29/invalid_test_cases/: Invalid_Cyclic_source.txt  Invalid_SPA_SIMPLE_1_source.txt  Invalid_SPA_SIMPLE_2_source.txt
Team29/Tests29/quiz_test_cases/: Single_nested_if_while_statements_queries.txt  Single_nested_if_while_statements_source.txt  Single_procedure_without_nested_statements_queries.txt  Single_procedure_without_nested_statements_source.txt
Team29/Tests29/stress_tests/: complex_cfg_200_line_queries.txt  complex_cfg_200_line_source.txt  complex_cfg_stress_test_queries.txt  complex_cfg_stress_test_source.txt
Team29/Tests29/test_scripts/: run_system.sh  test_extender.py
Team29/Tests29/wiki/: wiki_code_10_queries.txt  wiki_code_10_queries_extended.txt  wiki_code_10_source.txt  wiki_code_10_source_extended.txt  wiki_code_5_queries.txt  wiki_code_5_queries_extended.txt  wiki_code_5_source.txt  wiki_code_5_source_extended.txt  wiki_code_6_queries.txt  wiki_code_6_source.txt  wiki_code_8_queries.txt  wiki_code_8_queries_extended.txt  wiki_code_8_source.txt  wiki_code_8_source_extended.txt  wiki_code_9_queries.txt  wiki_code_9_queries_extended.txt  wiki_code_9_source.txt  wiki_code_9_source_extended.txt
