file(GLOB srcs
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Expression.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Node.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/Parser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/ProcedureParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/StatementListParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/StatementParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/PrintParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/ReadParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/CallParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/IfParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/WhileParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/ConditionalParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/ExpressionParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/AssignParser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Procedure.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Program.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Statement.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/StatementList.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/AffectsGraph.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/Graph.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/Node.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/ProgramGraph.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/Visitor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opr/Join.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opr/Operator.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opr/Project.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opr/Scan.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/BushyTreesPlanner.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/GreedyPlanner.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/HeuristicPlanner.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/QueryPlanner.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/SequentialPlanner.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/AffectsVisitor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/AffectsTVisitor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/NextVisitor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/PKBRoot.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Affects.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Calls.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Clause.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Compare.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Follows.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Modifies.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Next.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Parent.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Pattern.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Uses.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Declaration.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Estimation.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Evaluator.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Parser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Query.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/QueryBuilder.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Ref.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Result.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Attribute.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Batch.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Schema.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Translator.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/CfgExtractor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/CallsExtractor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/FollowsExtractor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/ModifiesExtractor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/ParentExtractor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/PatternExtractor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/SourceExtractor.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/UsesExtractor.cpp"
)

file(GLOB headers
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Expression.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Node.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/ParseException.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/Parser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/ProcedureParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/StatementListParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/StatementParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/PrintParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/ReadParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/CallParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/IfParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/WhileParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/ConditionalParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/ExpressionParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/parser/AssignParser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Procedure.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Program.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/Statement.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ast/StatementList.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/AffectsGraph.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/Graph.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/Node.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/ProgramGraph.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/Visitor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opr/Join.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opr/Operator.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opr/Project.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opr/Scan.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/BushyTreesPlanner.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/Exception.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/GreedyPlanner.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/HeuristicPlanner.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/QueryPlanner.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/opt/SequentialPlanner.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/AffectsVisitor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/AffectsTVisitor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/Cache.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/NextVisitor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pkb/PKBRoot.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Affects.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Calls.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Clause.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Compare.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Follows.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Modifies.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Next.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Parent.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Pattern.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/Uses.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Comparators.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Declaration.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Estimation.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Evaluator.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Parser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Query.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/QueryBuilder.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/QueryException.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Ref.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/Result.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Attribute.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Batch.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Element.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Schema.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/Translator.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/CfgExtractor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/CallsExtractor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/ExtractException.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/FollowsExtractor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/ModifiesExtractor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/ParentExtractor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/PatternExtractor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/SourceExtractor.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xtr/UsesExtractor.h"
)

add_library(spa ${srcs} ${headers} )

# this makes the headers accessible for other projects which uses spa lib
target_include_directories(spa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src) 
