file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/TestAST.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/ASTHelper.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/ASTHelper.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/TestFunctions.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/TestTokenizer.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestAffects.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestCalls.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestClause.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestCompare.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestFollows.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestModifies.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestNext.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestParent.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestPattern.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestUses.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestComparators.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestDeclaration.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestParser.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestParserRelation.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestParserPattern.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestParserCompare.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestQuery.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestQueryBuilder.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestRef.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestResult.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/AffectsBipData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/AffectsBipTData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/AffectsData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/AffectsTData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/CallsData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/CallsTData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/CompareData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/FollowsData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/FollowsTData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/ModifiesData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/NextBipData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/NextBipTData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/NextData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/NextTData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/ParentData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/ParentTData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/PatternData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/UsesData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/DeclarationData.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/QueryData.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/QueryDataUtil.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/QueryStringBuilder.cpp")

file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestAffects.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestCalls.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestClause.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestCompare.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestFollows.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestModifies.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestNext.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestParent.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestPattern.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/clause/TestUses.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestComparators.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestDeclaration.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestParser.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestQuery.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestRef.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/TestResult.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/AffectsBipData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/AffectsBipTData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/AffectsData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/AffectsTData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/CallsData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/CallsTData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/CompareData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/FollowsData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/FollowsTData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/ModifiesData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/NextBipData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/NextBipTData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/NextData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/NextTData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/ParentData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/ParentTData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/PatternData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/clause/UsesData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/DeclarationData.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/QueryData.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/QueryDataUtil.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/QueryStringBuilder.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/pql/data/RefBuilder.h")

add_executable(unit_testing ${srcs})

target_link_libraries(unit_testing spa)
